# Mark-XXXIX

./: .gitignore  SECURITY.md  install_daemon.sh  main.py  pyproject.toml  readme.md  requirements.txt  setup.py  start.sh  ui.py  wakeword.py
actions/: computer_control.py  computer_settings.py  desktop.py  file_controller.py  game_updater.py  open_app.py  screen_processor.py  send_message.py  website_builder.py  youtube_video.py
agent/: tool_registry.py
core/: prompt.txt
memory/: long_term.json
